@@ -196,6 +196,9 @@ def readMGI2UNIPROT():
     #   key = MGI id
     #   value = list of uniprot ids, either SP or TrEMBL
     #
+    # we are only interested in SwissProt ids
+    # ignore TrEMBL ids
+    #
 
     global mgi_to_uniprotFile
 
@@ -211,14 +214,10 @@ def readMGI2UNIPROT():
 	tokens = string.split(line[:-1], '\t')
 	key = tokens[0]
 	value1 = string.split(tokens[1], ',')
-	#value2 = string.split(tokens[2], ',')
 
         mgi_to_uniprot[key] = []
         for v in value1:
             mgi_to_uniprot[key].append(v)
-
-        #for v in value2:
-        #    mgi_to_uniprot[key].append(v)
 
     fp.close()
 
